<resources>
    <string name="app_name">LABTest2</string>

    <!--    launch screen string-->
    <string name="launchtext">Delivery Restaurant App</string>
    <string name="launchpic_desc">Launch Image</string>
    <string name="logo_desc">Logo Image</string>
    <!--    onboarding1 screen string-->
    <string name="onboarding1ttl">Enjoy a World of Flavors</string>
    <string name="onboarding1_desc">Discover a variety of cuisines and savor delicious dishes from around the globe, delivered right to your doorstep.</string>
    <string name="onboarding1_btn">Next</string>
    <string name="onboarding1_pic">onboarding1_pic</string>

    <!--    onboarding2 screen string-->
    <string name="onboarding2ttl">Satisfy Your Cravings</string>
    <string name="onboarding2_desc">Whether it’s a quick snack or a full meal, get exactly what you’re craving with just a few taps.</string>
    <string name="onboarding2_pic">onboarding2_pic</string>

    <!--    onboarding3 screen string-->
    <string name="onboarding3ttl">Tasty Meals,Anytime, Anywhere!</string>
    <string name="onboarding3_desc">Enjoy fresh and flavorful meals whenever and wherever you want, with fast and reliable delivery.</string>
    <string name="onboarding3_pic">onboarding3_pic</string>

    <!--    getstarted screen string-->
    <string name="getstart_btn">getstarted</string>

    <!--    login screen string-->
    <string name="username">username</string>
    <string name="enterusername">Enter username</string>
    <string name="password">password</string>
    <string name="enterpassword">Enter password</string>
    <string name="login_btn">Login</string>
    <string name="loginttl">Login</string>

    <!--    signup screen string-->

    <string name="signup_btn">Signup</string>
    <string name="signup_desc">Signuplogo</string>
    <string name="signup_username">Username</string>
    <string name="signup_enterusername">Enter your username</string>
    <string name="signup_Email">Email</string>
    <string name="signup_enteremail">Enter your email</string>
    <string name="signup_phonenum">Phone number</string>
    <string name="signup_enterphonenum">Enter your phonenumber</string>
    <string name="signup_password">Password</string>
    <string name="signup_enterpassword">Enter your password</string>

<!--    payment successfull-->

    <string name="paymentsuccess_desc">paymentsuccess</string>
    <string name="paymentsuccess_details">You successfully made a payment</string>
    <string name="paymentsuccess_details2">enjoy our service!</string>
<!--    Add payment card-->

    <string name="pcart_ttl">Add card</string>
    <string name="pcart_name">Card holder name</string>
    <string name="pcart_name_in">Shanuja kanthakumar</string>
    <string name="pcart_num">Card Number</string>
    <string name="pcart_num_in">2113 3333 4444</string>
    <string name="pcart_date">Expire date</string>
    <string name="pcart_date_in">mm/yyyy</string>
    <string name="pcart_cvc">CVC</string>
    <string name="pcart_cvc_in">***</string>
    <string name="back_btn">back_btn</string>
    <string name="pcart_btn">Make payment</string>

<!--    editprofile -->

    <string name="eprofile_ttl">Edit Profile</string>
    <string name="eprofile_pic">Edit Profile_pic</string>
    <string name="eprofile_btn">Save</string>
    <string name="eprofile_email">shanukanthan41@gmail.com</string>
    <string name="eprofile_phonenum">+94779041901</string>
    <string name="eprofile_password">***********</string>

<!--    profile details-->
    <string name="profile_ttl">Profile</string>
    <string name="profile_name">Shanuja Kanthakumar</string>
    <string name="profile_personalinfo">Personal Info</string>
    <string name="profile_address">Address</string>
    <string name="profile_cart">Cart</string>
    <string name="profile_orderdetails">Order details</string>
    <string name="logout">Log Out</string>
    <string name="next">next</string>



    <string name="place_order">Place order</string>
<!--    shipping address-->
    <string name="shippingaddress">Shipping Address</string>
    <string name="home">Home</string>
    <string name="haddress">No: 8 Sivan North Road Jaffna</string>
    <string name="campus">Campus</string>
    <string name="caddress">malabe</string>
    <string name="grandpahome">Grandpa Home</string>
    <string name="gaddress">Thirunelveli jaffna</string>
    <string name="home2">Home 2</string>
    <string name="h2address">Jaffna road</string>
    <string name="ship_btn">Apply</string>

<!--home page -->
    <string name="food">food</string>

    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="burger">Burger</string>
    <string name="sandwich">sandwich</string>
    <string name="hotdog">Hotdog</string>

    <string name="promotion">Promotion</string>
    <string name="promotion_desc">Today\'s offer </string>
    <string name="promotion_desc2">Free box of chicken  </string>
    <string name="promotion_desc3">on all orders above Rs.2000 </string>

    <string name="popular">Popular</string>

    <string name="beef_burger">Beef Burger</string>
    <string name="beef_burger_price">Rs.1000</string>
    <string name="beef_burger_desc">
        Big juicy beef burger with Cheeser ,lettuce,Tomato,Onions and special sauce!</string>

    <string name="chicken_hotdog">Chicken Hotdog</string>
    <string name="chicken_hotdog_price">Rs.1800</string>

    <string name="addtocart">Add to cart</string>
    <string name="addonce">Add Once</string>
<!--addtocart-->
    <string name="addtocartttl">2 items in cart</string>
    <string name="order">Order Instructions</string>
    <string name="total">Total</string>
    <string name="totalprice">Rs.1900 </string>
    <string name="placeorder_btn">Place Order</string>
    <string name="count">1</string>

<!--payment-->
    <string name="cash">Cash</string>
    <string name="visa">Visa</string>
    <string name="master">Master</string>

    <string name="mastercard">Master Card</string>
    <string name="mastercardpin">***********123</string>
    <string name="confirmorder">Confirm Order</string>
    <string name="paymentttl">Payment</string>

    <string name="orderfood">Beef Burger &amp; Hotdogs</string>
    <string name="trackorder">Track order</string>
    <string name="cancel">Cancel</string>
    <string name="orderttl">Order Details</string>



</resources>