<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_btn"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_ttl" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_name" />


    <EditText
        android:id="@+id/entercardname"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="username"
        android:background="@android:drawable/edit_text"
        android:hint="@string/pcart_name_in"
        android:inputType="text|textAutoComplete"
        android:padding="12dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_num" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_num_in" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_date" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_date_in" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_cvc" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_cvc_in" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pcart_btn" />

</LinearLayout>