<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme1"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/signup_desc"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signup_btn"
        android:textColor="@color/theme3"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup_username"
        android:textColor="@color/theme3"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/signupenterusername"
        android:layout_width="344dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="enterusername"
        android:background="@android:drawable/edit_text"
        android:layout_marginStart="20dp"
        android:hint="@string/enterusername"
        android:inputType="text|textAutoComplete"
        android:padding="12dp"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup_Email"
        android:textColor="@color/theme3"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textView5"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints="enteremail"
        android:background="@android:drawable/edit_text"
        android:inputType="text|textAutoComplete"
        android:text="@string/signup_enteremail"
        android:textSize="20sp"
        tools:ignore="LabelFor,TextViewEdits" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup_phonenum"
        android:textColor="@color/theme3"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints="enterphonenum"
        android:background="@android:drawable/edit_text"
        android:inputType="text|textAutoComplete"
        android:text="@string/signup_enterphonenum"
        android:textSize="20sp"
        tools:ignore="LabelFor,TextViewEdits" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup_password"
        android:textColor="@color/theme3"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/textView9"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:autofillHints="enterpassword"
        android:background="@android:drawable/edit_text"
        android:inputType="text|textAutoComplete"
        android:text="@string/signup_enterpassword"
        android:textSize="20sp"
        tools:ignore="LabelFor,TextViewEdits" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/oval_button"
        android:backgroundTint="@color/theme2"
        android:text="@string/signup_btn"
        android:textColor="@color/theme3"
        android:textSize="20sp" />

</LinearLayout>