<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/username"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/enterusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/enterusername"
        android:inputType="text|textAutoComplete"
        android:padding="12dp"
        android:textSize="18sp"
        android:autofillHints="username" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/password"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/enterpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/enterpassword"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textSize="18sp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/login_btn" />

</LinearLayout>